--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+.parents {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.imgSrc {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.childres {
+    width: 30%;
+    margin: 10px;
+    border: 1px solid;
+    padding: 15px 20px;
+}
+
+.childres h3 {
+    margin-bottom: 15px;
+}
+
+@media only screen and (max-width: 480px) {
+    .childres {
+        width: 100%;
+    }
 }
